--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -1,13 +1,10 @@
 /*
-Theme Name: Chunk
+Theme Name: (Adapted) Chunk
 Theme URI: http://theme.wordpress.com/themes/chunk/
-Author: Automattic
-Author URI: http://automattic.com
+Author: Automattic/Martin Fitzpatrick
 Description: A straightforward theme with bold typography designed by <a href="http://twitter.com/#!/thisistran/">Tran N</a>. Featuring multiple post formats, custom background, custom menu, and custom header. Also comes with an optional footer widget area.
 Version: 1.0-wpcom
 License: GNU General Public License
-License URI: license.txt
-Tags: light, white, fixed-width, one-column, custom-background, custom-header, custom-menu, post-formats, rtl-language-support, sticky-post, translation-ready, art, blog, cartoon, holiday, journal, lifestream, photography, tumblelog, bright, clean, contemporary, flamboyant, modern
 */
 
 @import url("pygment.css");
@@ -59,7 +56,7 @@ body {
 	text-decoration: none;
 }
 #site-title a:hover {
-	color: #36bcab;
+	color: #ef4323;
 }
 #site-description {
 	background: #f1f1f1;
@@ -210,13 +207,13 @@ body {
 	margin: 0px;
 }
 .hentry .entry-meta .comments {
-	color: #36bcab;
+	color: #ef4323;
 	display: block;
 	font-size: 16px;
 	margin: -4px 0 0;
 }
 .hentry .entry-meta .comments a {
-	color: #36bcab;
+	color: #ef4323;
 	font-size: 22px;
 	font-weight: bold;
 	text-decoration: none;
@@ -231,7 +228,7 @@ body {
 	color: #777;
 }
 .hentry .entry-meta .cat-links a:hover {
-	color: #36bcab;
+	color: #ef4323;
 }
 .hentry .entry-meta .edit-link a {
 	font-size: 16px;
@@ -267,7 +264,7 @@ body {
 }
 blockquote {
 	background: #eee;
-	border-left: 10px solid #36bcab;
+	border-left: 10px solid #ef4323;
 	color: #000;
 	font-family: Georgia, Arial, Helvetica, sans-serif;
 	font-size: 15px;
@@ -279,7 +276,7 @@ a {
 	text-decoration: underline;
 }
 a:hover {
-	color: #36bcab;
+	color: #ef4323;
 }
 .entry-content a img {
 	border: 10px solid #ddd;
@@ -321,7 +318,7 @@ b, strong {
 	background: #f5f5f5;
 }
 .page-link a {
-	background: #36bcab;
+	background: #ef4323;
 	border-radius: 26px;
 	color: #000;
 	font-weight: normal;
@@ -630,7 +627,7 @@ article.comment {
 	width: 80%;
 }
 #respond label {
-	background: #36bcab;
+	background: #ef4323;
 	border-radius: 3px;
 	color: #c8f1ec;
 	font-size: 13px;
@@ -808,7 +805,7 @@ article.comment {
 	width: 800px;
 }
 #footer a {
-	color: #36bcab;
+	color: #ef4323;
 	text-decoration: none;
 }
 
