--- a/theme/templates/tags.html
+++ b/theme/templates/tags.html
@@ -8,7 +8,7 @@
 {% block content %}
 <ul>
 {% for tag, article in tags %}
-    <li><a href="{{ SITEURL }}/{{ tag.url }}">{{ tag.name }}</a></li>
+    <li><a href="{{ SITEURL }}/{{ tag.url }}" class="tag">{{ tag.name }}</a></li>
 {% endfor %}
 </ul>
 {% endblock %}
