Theme tweak test

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -825,6 +825,7 @@ article.comment {
     font-size:12px;
     color: #858376 !important;
     white-space: nowrap !important;
+    text-decoration:none;
 }   
 
 
