--- a/theme/templates/post.html
+++ b/theme/templates/post.html
@@ -21,7 +21,7 @@
 		{% if article.tags %}
     		<span class="tag-links"><strong>Tagged</strong>
     			{% set delimiter = joiner() %}
-    			{% for tag in article.tags|sort %}{{- delimiter() }} <a href="{{ SITEURL }}/{{ tag.url }}" rel="tag" class="tag">{{ tag }}</a>{% endfor %}
+    			{% for tag in article.tags|sort %} <a href="{{ SITEURL }}/{{ tag.url }}" rel="tag" class="tag">{{ tag }}</a>{% endfor %}
     		</span>
     	{% endif %}
 	</div> <!--/#main-->
