--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -826,6 +826,7 @@ article.comment {
     color: #858376 !important;
     white-space: nowrap !important;
     text-decoration:none;
+    border-radius:3px;
 }   
 
 
