--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -27,7 +27,7 @@
 
 <body class="home blog" >
 	<div id="container">
-		<div id="header"><a href="{{ SITEURL }}"><img src="./theme/img/gols.png" alt="{{ SITENAME }}"></a></div><!-- /#banner -->
+		<div id="header"><a href="{{ SITEURL }}"><img src="{{ SITEURL }}/theme/img/gols.png" alt="{{ SITENAME }}"></a></div><!-- /#banner -->
 		<div id="menu">
 			<div class="menu-navigation-container">
 				<ul id="menu-navigation" class="menu">
