--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -519,24 +519,58 @@ img.alignright {
 
 
 .tag {
-    padding:5px 5px;
-    background-color:#fefbe2;
-    white-space:nowrap; 
-    margin-bottom:2px;
-    margin-right:2px;
+	border-radius: 3px;
+	color: #666;
+	font-weight: normal;
+	margin-right: 4px;
+	padding: 3px 6px;
     border:1px solid #edead2;
-    vertical-align:middleod;
-    no-border-radius:5px;
+    background-color:#fefbe2;
     font-size:12px;
     color: #858376 !important;
     white-space: nowrap !important;
     text-decoration:none;
-    border-radius:3px;
+    line-height:2.5em;
 }   
 
 #comments {
     padding:1em;
 }
 
+#footer-data {
+    text-align:left;
+}
+
+.github blockquote {
+    border:none;
+    background:none;
+    font:italic normal #888 0.8em;
+}
+
+.github blockquote, div.title, div.time, div.message {
+    display:inline;
+    margin:0; padding:0;
+    font-weight:normal;
+    text-align:left;
+}
+
+.github li, .github ul {
+    list-style-type:none;
+    list-style-position:inside;
+    padding-left:1em;
+}
+
+.github aimg, a.gravatar, .github code {
+    display:none;
+}
+
+.github li {
+    
+}
+
+.github_entry {
+    margin-bottom:1em;
+    width:300px;
+}
 
 
