--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -5,8 +5,23 @@
 		<title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
 		<meta charset="utf-8" />
 		<link rel="profile" href="http://gmpg.org/xfn/11" />
+
+
+
+        <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/foundation/css/foundation.min.css" />
+        <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/foundation/webicons/fc-webicons.css" />
+
+        <script src="{{ MEDIA_URL }}foundation/js/vendor/custom.modernizr.js"></script>
+
+		<!-- Base CSS --><link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" />
+
+        <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/general_foundicons.css" />
+        <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/social_foundicons.css" />
+
 		<link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
 		<link rel='stylesheet' id='oswald-css'  href='http://fonts.googleapis.com/css?family=Oswald&#038;ver=3.3.2' type='text/css' media='all' />
+
+
 		<style type="text/css">
 			body.custom-background { background-color: #f5f5f5; }
 		</style>
@@ -26,31 +41,42 @@
 </head>
 
 <body class="home blog" >
-	<div id="container">
-		<div id="header"><a href="{{ SITEURL }}"><img src="{{ SITEURL }}/theme/img/gols.png" alt="{{ SITENAME }}"></a></div><!-- /#banner -->
-		<div id="menu">
-			<div class="menu-navigation-container">
-				<ul id="menu-navigation" class="menu">
-					{% for title, link in MENUITEMS %}
-						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ link }}">{{ title }}</a></li>
-					{% endfor %}
-					  {% for p in PAGES %}
-						<li{% if p == page %} class="active"{% endif %} class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
-					  {% endfor %}
-					{% if DISPLAY_CATEGORIES_ON_MENU %}
-					  {% for cat, null in categories %}
-						<li{% if cat == category %} class="active"{% endif %} class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
-					  {% endfor %}
-					{% endif %}
-					{% if LINKS %}
-					  {% for name, url in LINKS %}
-						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ url }}">{{ name }}</a></li>
-					  {% endfor %}
-					{% endif %}
 
-				</ul>
-			</div> <!--/#menu-navigation-container-->
-		</div><!-- /#menu -->
+    <div class="row">
+    <div class="large-10 columns large-offset-1 menu">
+
+	<div class="row">
+        <div class="large-12 columns" id="header">
+            <a href="{{ SITEURL }}"><img src="{{ SITEURL }}/theme/img/gols.png" alt="{{ SITENAME }}"></a>
+        </div><!--/#large-9 columns-->
+    </div><!-- /#row -->
+
+    <div class="row">
+    <div class="large-12 columns menu" id="menu">
+		<ul id="menu-navigation" class="menu">
+			{% for title, link in MENUITEMS %}
+				<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ link }}">{{ title }}</a></li>
+			{% endfor %}
+			  {% for p in PAGES %}
+				<li{% if p == page %} class="active"{% endif %} class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></li>
+			  {% endfor %}
+			{% if DISPLAY_CATEGORIES_ON_MENU %}
+			  {% for cat, null in categories %}
+				<li{% if cat == category %} class="active"{% endif %} class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
+			  {% endfor %}
+			{% endif %}
+			{% if LINKS %}
+			  {% for name, url in LINKS %}
+				<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ url }}">{{ name }}</a></li>
+			  {% endfor %}
+			{% endif %}
+
+		</ul>
+		</div> <!--/#large-9 columns-->
+	</div><!-- /#row -->
+
+    <div class="row">
+        <div class="large-9 large-offset-3 columns">
 		
 		<div class="page-title">
 			{% block content_title %}{% endblock %}
@@ -61,19 +87,14 @@
 			{% endblock %}
 		</div>
 
-        <div id="footer-data">
 
-        {% if GITHUB_ACTIVITY_FEED %}
-           <div class="social github">
-                   <h2>Github Activity</h2>
-                   {% for entry in github_activity %}
-                       <div class="github_entry">{{ entry[1] }}</div>
-                   {% endfor %}
-           </div><!-- /.github_activity -->
-        {% endif %}
-        </div>
 		
-		<div id="footer">
+		</div><!-- /#columns -->
+	</div><!-- /#row -->
+
+
+        <div class="row">
+        <div class="large-12 columns" id="footer">
 
 
 			<p>{{ FOOTER_TEXT or 'Powered by <a href="http://pelican.readthedocs.org">Pelican</a>' }}</p>
@@ -93,9 +114,14 @@
 			{% if DISQUS_SITENAME %}
 				{% include 'disqus_script.html' %}
 			{% endif %}
-		</div><!-- /#footer -->
-<br style="clear:all;" />
-	</div><!-- /#container -->
+
+
+		</div><!-- /#columns -->
+	</div><!-- /#row -->
+
+
+		</div><!-- /#columns -->
+	</div><!-- /#row -->
 
 </body>
 </html>
