--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -408,10 +408,12 @@ h1,h2,h3,h4,h5,h6 {
 .entry-content h5 { font-size: 1.2em; }
 .entry-content h6 { font-size: 1.1em; }
 
+.entry-content ul { list-style-position:inside; }
+
+
 blockquote {
 	background: #f5f5f5;
 	border-left: 10px solid #ef4323;
-	color: #000;
 	font-family: Georgia, Arial, Helvetica, sans-serif;
 	font-size: 15px;
 	padding: 10px;
