--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -2,7 +2,7 @@
 {% block title %}{{ SITENAME }} &mdash; Archives{% endblock %}
 {% block content_title %}
 <div class="page-title">
-	<h2>Archives for <span>{{ SITENAME }}</span> &hellip;</h2>
+	<h2>Archives for <span>{{ SITENAME }}</span></h2>
 </div>
 {% endblock %}
 {% block content %}
