--- a/theme/templates/author.html
+++ b/theme/templates/author.html
@@ -2,5 +2,5 @@
 
 {% block title %}{{ SITENAME }} &mdash; Articles by {{ author|striptags }}{% endblock %}
 {% block content_title %}
-	<h2>Posted by <span>{{ author }}</span> &hellip;</h2>
+	<h2>Posted by <span>{{ author }}</span></h2>
 {% endblock %}
