--- a/theme/templates/pagination.html
+++ b/theme/templates/pagination.html
@@ -11,7 +11,7 @@
 		</div>		
 	{% endif %}
 	{% if articles_page.has_next() %}
-		<div class="nav-next"><a href="{{ SITEURL }}/{{ page_name }}/index{{ articles_page.next_page_number() }}.html" >Older posts <span class="meta-nav">&rarr;</span></a></div>
+		<div class="nav-next"><a href="{{ SITEURL }}/{{ page_name }}index{{ articles_page.next_page_number() }}.html" >Older posts <span class="meta-nav">&rarr;</span></a></div>
 	{% endif %}
 </div>
 {% endif %}
