--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -68,7 +68,7 @@
 
 		</ul>
 
-		<ul id="menu-navigation" class="menu">
+		<ul id="menu-navigation" class="menu links">
 			{% if LINKS %}
 			  {% for name, url in LINKS %}
 				<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ url }}">{{ name }}</a></li>
