--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -25,7 +25,7 @@
 		</style>
 		<link rel="alternate" type="application/atom+xml"
 			title="{{ SITENAME }} — Flux Atom"
-			href="{{ SITEURL }}/{{ FEED_ATOM }}" /> 
+			href="{{ SITEURL }}/{{ FEED_ALL_ATOM }}" /> 
 		{% if FEED_RSS %}
 		<link rel ="alternate" type="application/rss+xml"
 			title="{{ SITENAME }} — Flux RSS"
