--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -107,7 +107,7 @@
 
 
 			<p>
-                &copy;2012-{% now "Y" %} <a href="http://golifescience.com">goLS</a> Licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a> and <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a>
+                &copy;2012-2013 <a href="http://golifescience.com">goLS</a> Licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a> and <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a>
                 &bull; {{ FOOTER_TEXT or 'Powered by <a href="http://pelican.readthedocs.org">Pelican</a>' }}
 			</p>
 			{% if GOOGLE_ANALYTICS %}
