--- a/theme/templates/pagination.html
+++ b/theme/templates/pagination.html
@@ -5,13 +5,13 @@
 			{% if articles_page.previous_page_number() == 1 %}
 				<a href="{{ SITEURL }}/{{ page_name }}">
 			{% else %}
-				<a href="{{ SITEURL }}/{{ page_name }}{% if page_name == '' %}index{% endif %}{{ articles_page.previous_page_number() }}">
+				<a href="{{ SITEURL }}/{% if page_name == '' %}index{% else %}{{ page_name }}{% endif %}{{ articles_page.previous_page_number() }}">
 			{% endif %}
 			<span class="meta-nav">&larr;</span> Newer posts</a>
 		</div>		
 	{% endif %}
 	{% if articles_page.has_next() %}
-		<div class="nav-next"><a href="{{ SITEURL }}/{{ page_name }}{% if page_name == '' %}index{% endif %}{{ articles_page.next_page_number() }}" >Older posts <span class="meta-nav">&rarr;</span></a></div>
+		<div class="nav-next"><a href="{{ SITEURL }}/{% if page_name == '' %}index{% else %}{{ page_name }}{% endif %}{{ articles_page.next_page_number() }}" >Older posts <span class="meta-nav">&rarr;</span></a></div>
 	{% endif %}
 </div>
 {% endif %}
