--- a/theme/templates/pagination.html
+++ b/theme/templates/pagination.html
@@ -1,5 +1,5 @@
 {% if DEFAULT_PAGINATION %}
-<div class="navigation">
+<div class="navigation"><!-- page_name: {{ page_name }} -->
 	{% if articles_page.has_previous() %}
 		<div class="nav-previous">
 			{% if articles_page.previous_page_number() == 1 %}
