--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<link rel="profile" href="http://gmpg.org/xfn/11" />
 
-
+        <link rel="shortcut icon" href="http://golifescience.com/favicon.ico" />
 
         <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/foundation/css/foundation.min.css" />
         <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/foundation/webicons/fc-webicons.css" />
