--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
 		<link rel='stylesheet' id='oswald-css'  href='http://fonts.googleapis.com/css?family=Oswald&#038;ver=3.3.2' type='text/css' media='all' />
 
+        <meta name="google-site-verification" content="Ogw6ZN_S7dzUc9huqkiLOeI_BH8F__4Ft8pNXQVU1Cw" />
 
 		<style type="text/css">
 			body.custom-background { background-color: #f5f5f5; }
