--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ SITENAME }} &mdash; Archives{% endblock %}
+{% block title %}Archives | {{ SITENAME }}{% endblock %}
 {% block content_title %}
 <div class="page-title">
 	<h2>Archives for <span>{{ SITENAME }}</span></h2>
