--- a/theme/templates/categories.html
+++ b/theme/templates/categories.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ SITENAME }} &mdash; Categories{% endblock %}
+{% block title %}Categories | {{ SITENAME }}{% endblock %}
 {% block content_title %}
 <div class="page-title">
 	<h2>Categories on <span>{{ SITENAME }}</span> &hellip;</h2>
