--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ SITENAME }} &mdash; {{ article.title|striptags }}{% endblock %}
+{% block title %}{{ article.title|striptags }} | {{ SITENAME }}{% endblock %}
 {% block content %}
 
 {% include 'post.html' %}
