--- a/theme/templates/author.html
+++ b/theme/templates/author.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block title %}{{ SITENAME }} &mdash; Articles by {{ author|striptags }}{% endblock %}
+{% block title %}Articles by {{ author|striptags }} | {{ SITENAME }}{% endblock %}
 {% block content_title %}
 	<h2>Posted by <span>{{ author }}</span></h2>
 {% endblock %}
