--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}{{ SITENAME }} &mdash; Articles in Category {{ category|striptags }}{% endblock %}
+{% block title %}Articles in Category {{ category|striptags }} | {{ SITENAME }}{% endblock %}
 {% block content_title %}
 <div class="page-title">
 	<h2>Filed under <span>{{ category }}</span></h2>
