--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ SITENAME }} &mdash; {{ page.title|striptags }}{% endblock %}
+{% block title %}{{ page.title|striptags }} | {{ SITENAME }}{% endblock %}
 {% block content %}
 <div class="page type-page status-publish hentry" id="post">
 	<div class="entry-meta">
