--- a/theme/templates/tag.html
+++ b/theme/templates/tag.html
@@ -1,5 +1,5 @@
 {% extends "index.html" %}
-{% block title %}{{ SITENAME }} &mdash; Articles tagged {{ tag }}{% endblock %}
+{% block title %}Articles tagged {{ tag }} | {{ SITENAME }}{% endblock %}
 {% block content_title %}
 <div class="page-title">
 	<h2>Tagged with <span>{{ tag }}</span></h2>
