--- a/theme/templates/tags.html
+++ b/theme/templates/tags.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ SITENAME }} &mdash; Tags{% endblock %}
+{% block title %}Tags | {{ SITENAME }}{% endblock %}
 {% block content_title %}
 <div class="page-title">
 	<h2>Tags on <span>{{ SITENAME }}</span> &hellip;</h2>
