Remove additional wrapper; 10 cols make page slightly more spacious

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<link rel="profile" href="http://gmpg.org/xfn/11" />
 
-        <link rel="shortcut icon" href="http://golifescience.com/favicon.ico" />
+        <link rel="shortcut icon" href="{{ SITEURL }}/favicon.ico" />
 
         <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/foundation/css/foundation.min.css" />
         <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/foundation/webicons/fc-webicons.css" />
@@ -127,17 +127,6 @@
 </div>
 
     <div class="row">
-    <div class="large-10 columns large-offset-1 menu">
-<!--
-	<div class="row">
-        <div class="large-12 columns" id="header">
-            <a href="{{ SITEURL }}"><img src="{{ SITEURL }}/theme/img/gols.png" alt="{{ SITENAME }}"></a>
-        </div><!--/#large-9 columns-->
-<!--    </div>--><!-- /#row -->
-
-
-
-    <div class="row">
         <div class="large-9 large-offset-3 columns">
 		
 		<div class="page-title">
@@ -181,9 +170,6 @@
 				{% include 'disqus_script.html' %}
 			{% endif %}
 
-
-		</div><!-- /#columns -->
-	</div><!-- /#row -->
 
 
 		</div><!-- /#columns -->
