--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -50,7 +50,7 @@
   <ul class="title-area">
     <!-- Title Area -->
     <li class="name">
-      <h1><a href="http://martinfitzpatrick.name">MARTIN FITZPATRICK <span class="lowlight">MRes</span></a></h1>
+      <h1><a href="http://martinfitzpatrick.name">Martin Fitzpatrick <span class="lowlight">MRes</span></a></h1>
     </li>
     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
