--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -454,7 +454,7 @@ body {
 
 
 .image-header {
-    background:url('../img/home-photo.jpg') right no-repeat;
+    background:url('../img/home-photo.jpg') center no-repeat;
     height:480px;
     position:relative;
 }
