Add seo meta stuff

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -24,6 +24,9 @@
         <meta name="google-site-verification" content="2DFeXMiIAIVr20q8LLteYxffew35Pp89MXa7Hyy0_IM" />
         <meta name="google-site-verification" content="aDPLnwleWQc6nHK2vIMKXY5kUBDHFUPNJ75QcdcdEss" />
 
+        <meta name="description" content="Articles, software, protocols and how-tos from a final-year PhD student working on the metabolomics of inflammatory diseases.">
+        <meta name="keywords" content="martin fitzpatrick,metabolomics,bioinformatics,python,github,mac,linux,pelican">
+
 		<style type="text/css">
 			body.custom-background { background-color: #f5f5f5; }
 		</style>
