Site verification for Bing

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -23,6 +23,7 @@
         <meta name="google-site-verification" content="tnbPDWRORDk2SjXzRhyh5HOarf2hDojT07FQS2zcMUY" />
         <meta name="google-site-verification" content="2DFeXMiIAIVr20q8LLteYxffew35Pp89MXa7Hyy0_IM" />
         <meta name="google-site-verification" content="aDPLnwleWQc6nHK2vIMKXY5kUBDHFUPNJ75QcdcdEss" />
+        <meta name="msvalidate.01" content="79DE55785B481065302BA20C0A64D33F" />
 
         <meta name="description" content="Articles, software, protocols and how-tos from a final-year PhD student working on the metabolomics of inflammatory diseases.">
         <meta name="keywords" content="martin fitzpatrick,metabolomics,bioinformatics,python,github,mac,linux,pelican">
