Add Qt to skill tag list

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -111,6 +111,7 @@
                 <a href="{{ SITEURL }}/category/bioinformatics">Bioinformatics</a> | 
                 <a href="{{ SITEURL }}/category/immunology">Immunology</a> |
                 <a href="{{ SITEURL }}/tag/python">Python</a> |
+                <a href="{{ SITEURL }}/tag/qt">Qt</a> |
                 <a href="{{ SITEURL }}/category/web-dev">Web Dev</a>
             </h6>
         </div>
